--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,18 +25,18 @@ FastTrackIT 2015
 
   <div id="header">
       <div id="sitebranding">
-          <h1>FastTrackIT.org</h1>
+          <h1>Black Sheep Team, guess where is the Black Sheep!</h1>
       </div>
       <div id="tagline">
-          <p>Welcome to NumGuess 2016!</p>
+          <p>Welcome to Black Team, THE BEST TEAM, NumGuess App!</p>
       </div>
   </div>
   <div id="navigation">
-      <a href="javascript:guessLink(1)">It could be 1</a></br>
-      <a href="javascript:guessLink(2)">It could be 2</a></br>
-      <a href="javascript:guessLink(3)">It could be 3</a></br>
-      <a href="javascript:guessLink(4)">It could be 4</a></br>
-      <a href="javascript:guessLink(5)">It could be 5</a></br>
+      <input type="button" id="guess1Button" class="myButton" value="Is it sheep 1?" onClick="guessLink(6)"/>
+      <input type="button" id="guess2Button" class="myButton" value="Is it sheep 2?" onClick="guessLink(7)"/>
+      <input type="button" id="guess3Button" class="myButton" value="Is it sheep 3?" onClick="guessLink(8)"/>
+      <input type="button" id="guess4Button" class="myButton" value="Is it sheep 4?" onClick="guessLink(9)"/>
+      <input type="button" id="guess5Button" class="myButton" value="Is it sheep 5?" onClick="guessLink(10)"/>
   </div>
   <div id="bodycontent">
       <div id="form">
@@ -53,11 +53,12 @@ FastTrackIT 2015
   <div id="serverResponse"></div>
 
   <div id="postcontent">
-      <a href="javascript:guessLink(6)">It could be 6</a></br>
-      <a href="javascript:guessLink(7)">It could be 7</a></br>
-      <a href="javascript:guessLink(8)">It could be 8</a></br>
-      <a href="javascript:guessLink(9)">It could be 9</a></br>
-      <a href="javascript:guessLink(10)">It could be 10</a></br>
+      <input type="button" id="guess6Button" class="myButton" value="Is it sheep 6?" onClick="guessLink(6)"/>
+      <input type="button" id="guess7Button" class="myButton" value="Is it sheep 7?" onClick="guessLink(7)"/>
+      <input type="button" id="guess8Button" class="myButton" value="Is it sheep 8?" onClick="guessLink(8)"/>
+      <input type="button" id="guess9Button" class="myButton" value="Is it sheep 9?" onClick="guessLink(9)"/>
+      <input type="button" id="guess10Button" class="myButton" value="Is it sheep 10?" onClick="guessLink(10)"/>
+
   </div>
 
   </body>
